<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/pref_header_general">

        <EditTextPreference
            android:title="@string/pref_location_title"
            android:summary="@string/pref_location_summary"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:singleLine="true" />

        <ListPreference
            android:defaultValue="@string/pref_temperature_unit_metric"
            android:entries="@array/pref_temperature_unit_list"
            android:entryValues="@array/pref_temperature_unit_values"
            android:key="@string/pref_temperature_unit_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_temperature_unit_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_advance_header">

        <SwitchPreference android:defaultValue="true"
            android:key="@string/pref_advance_key"
            android:title="@string/pref_advance_title"
            android:summary="@string/pref_advance_summary" />

        <EditTextPreference android:title="@string/pref_lat_title"
            android:dependency="@string/pref_advance_key"
            android:key="@string/pref_lat_key"
            android:defaultValue="@string/pref_lat_default"
            android:inputType="text"
            android:singleLine="true" />

        <EditTextPreference android:title="@string/pref_lon_title"
            android:dependency="@string/pref_advance_key"
            android:key="@string/pref_lon_key"
            android:defaultValue="@string/pref_lon_default"
            android:inputType="text"
            android:singleLine="true"/>

        <Preference android:title="@string/pref_map_title"
            android:dependency="@string/pref_advance_key"
            android:key="@string/pref_map_key"
            android:summary="@string/pref_map_summary" />

    </PreferenceCategory>
</PreferenceScreen>